# wasm-dom-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  package-lock.json  package.json
asm-dom-cpp/: CMakeLists.txt  index.html  main.cpp
asm-dom-js/: index.html  index.js  webpack.config.js
asm-dom-js-embind/: CMakeLists.txt  binding.cpp  index.html  index.js  webpack.config.js
snabbdom-js/: index.html  index.js  webpack.config.js
virtual-dom-js/: index.html  index.js
wasm-dom-c-js/: CMakeLists.txt  binding.cpp  index.html  index.js  webpack.config.js
wasm-dom-cpp/: CMakeLists.txt  index.html  main.cpp
wasm-dom-js/: CMakeLists.txt  binding.cpp  index.html  index.js  webpack.config.js
